# transformers-test

./: .env.example  .gitignore  README.md  download_model.py  explain_model.py  pyproject.toml  run_model.py
scripts/: settings.py
