[tool.poetry]
name = "transformers-test"
version = "0.0.0"
description = "Transformers test"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
transformers = "^4.52.2"
torch = "^2.7.0"
captum = "^0.8.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"
matplotlib = "^3.8.2"
python-dotenv = "^1.0.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
